chore: 配置文件改为ts并且替换启用属性

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "notebook-next",
+  "type": "module",
   "scripts": {
     "dev": "vitepress dev docs",
     "serve": "vitepress serve docs",
